// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with maximize icon 1`] = `
<div
  className="CRUD-details__metas"
>
  <button
    icon="maximize"
    minimal={true}
    onClick={[MockFunction]}
    type="button"
  />
  <div
    title="CRUD.details.close"
    to="/CRUD/map/fooLayer%20"
  >
    <span
      className="bp3-button bp3-minimal"
    >
      <div>
        Icon close
      </div>
    </span>
  </div>
</div>
`;

exports[`should render correctly with minimize icon 1`] = `
<div
  className="CRUD-details__metas"
>
  <button
    icon="minimize"
    minimal={true}
    onClick={[MockFunction]}
    type="button"
  />
  <div
    title="CRUD.details.close"
    to="/CRUD/map/fooLayer%20"
  >
    <span
      className="bp3-button bp3-minimal"
    >
      <div>
        Icon close
      </div>
    </span>
  </div>
</div>
`;
